syntax = "proto3";
option java_package = "common";
option java_multiple_files = true;//Her message ve service için ayrı .java dosyası üretir

service EmailService {
  rpc FetchLatestEmails (EmailRequest) returns (EmailResponse);
}
message EmailRequest {

}

message EmailResponse {
  repeated  EmailDtoProto  fetchedEmails = 1; //list<emildto>
}

message EmailDtoProto {
  string emailId = 1;
  string subject = 2;
  string sender = 3;
  string snippet = 4;
  string receivedAt = 5;
  repeated string labels = 6;
  bool hasAttachment = 7;
  int32 sizeEstimate = 8;
}

